K8s/app_manifest/app_stage_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ToDo_app_stage
  name: ToDo_app_stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ToDo_app_stage
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ToDo_app_stage
    spec:
      containers:
      - image: toph2490/my_to_do_list
        name: myapp
        resources: {}
status: {}
