K8s/app_manifest/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql_svc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
  type: clusterIp
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ToDo_app
  name: ToDo_app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ToDo_app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ToDo_app
    spec:
      containers:
      - image: toph2490/my_to_do_list
        name: myapp
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ToDo_app
  name: todo_svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: ToDo_app
  type: clusterIp
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ToDo_app_stage
  name: ToDo_app_stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ToDo_app_stage
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ToDo_app_stage
    spec:
      containers:
      - image: toph2490/my_to_do_list
        name: myapp
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ToDo_app_stage
  name: todo_stage_svc
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: ToDo_app_stage
  type: clusterIp
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ToDo
spec:
  rules:
  - host: todo.com
    http:
      paths:
      - backend:
          service:
            name: todo_svc
            port:
              number: 5000
        path: /
        pathType: Prefix
  - host: stage.todo.com
    http:
      paths:
      - backend:
          service:
            name: todo_stage_svc
            port:
              number: 5000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
